@@ -57,7 +57,7 @@ namespace MySql.Data.MySqlClient
 		{
 			designTimeVisible = true;
 			cmdType = CommandType.Text;
-			parameters = new MySqlParameterCollection();
+			parameters = new MySqlParameterCollection(this);
 			updatedRowSource = UpdateRowSource.Both;
 			cursorPageSize = 0;
 			cmdText = String.Empty;
@@ -78,8 +78,6 @@ namespace MySql.Data.MySqlClient
 			: this(cmdText)
 		{
 			Connection = connection;
-			if (connection != null)
-				parameters.ParameterMarker = connection.ParameterMarker;
 		}
 
 		/// <include file='docs/mysqlcommand.xml' path='docs/ctor4/*'/>
@@ -180,8 +178,6 @@ namespace MySql.Data.MySqlClient
 					Transaction = null;
 
 				connection = (MySqlConnection)value;
-				if (connection != null)
-					parameters.ParameterMarker = connection.ParameterMarker;
 			}
 		}
 
